ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host
  labels:
    name: virtual-host
spec:
  tls:
  - hosts:
      - go-web.netstat.my.id
      - grpc.netstat.my.id
#    secretName: tls-wildcard
  rules:
  - host: gow-web.netstat.my.id
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-web
            port: 
              number: 8081
  - host: grpc.netstat.my.id
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: grpc
            port: 
              number: 8082
